Fixed horizontal scrollbar

--- a/static/collecions.css
+++ b/static/collecions.css
@@ -8,8 +8,8 @@
     height: 100vh;
     align-content: center;
     justify-items: center;
-    width: 99dvw;
-    height: 100dvh;
+    width: 100%;
+
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
